# Aris-AI-Model-Server

./: .dockerignore  .flake8  .gitignore  README.md  README_zh.md  dockerfile  embedding_api.py  justfile  main.py  pyproject.toml
.github/workflows/: docker-build.yml
config/: .env.template  mas.env.template  models.yaml.template
docker/: dockerfile  mas_base.dockerfile
scripts/: autoawq.py  autoawq.sh  autogptq.py  autogptq.sh  quantize_auto_awq.py  start.sh
src/api/auth/: bearer.py
src/api/model/: chat.py  chat_cmpl.py  embedding.py  reranker.py  root.py
src/api/router/: root.py
src/api/router/v1/: __init__.py  chat_cmpl.py  embedding.py  model.py  reranker.py
src/config/: __init__.py  arg.py  env.py  gbl.py  model.py
src/controller/: __init__.py  controller.py
src/engine/: base.py  embedding.py  mlx.py  reranker.py  vllm.py
src/engine/embedding/: infinity.py  sentence_transformer.py
src/engine/llm/: mlx.py  vllm.py
src/engine/reranker/: infinity.py  sentence_transformer.py
src/logger/: __init__.py
src/utils/: formatter.py  template.py
